-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: hs23
-
Component/s: hotspot
-
b20
-
generic
-
generic
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2228528 | 8 | Christian Thalinger | P3 | Resolved | Fixed | b52 |
| JDK-8017945 | 7u45 | Christian Thalinger | P3 | Closed | Fixed | b01 |
| JDK-8002759 | 7u40 | Christian Thalinger | P3 | Closed | Fixed | b01 |
- backported by
-
JDK-2228528 nightly failures after JSR 292 lazy method handle update (round 2)
-
- Resolved
-
-
JDK-8002759 nightly failures after JSR 292 lazy method handle update (round 2)
-
- Closed
-
-
JDK-8002760 nightly failures after JSR 292 lazy method handle update (round 2)
-
- Closed
-
-
JDK-8002761 nightly failures after JSR 292 lazy method handle update (round 2)
-
- Closed
-
-
JDK-8017945 nightly failures after JSR 292 lazy method handle update (round 2)
-
- Closed
-
- relates to
-
JDK-7191102 nightly failures after JSR 292 lazy method handle update (round 3)
-
- Resolved
-
-
JDK-7187290 nightly failures after JSR 292 lazy method handle update
-
- Closed
-
-
JDK-8000999 backport of JSR 292 to 7u
-
- Closed
-