7188911: nightly failures after JSR 292 lazy method handle update (round 2)

Reviewed-by: kvn, jrose